[package]
name = "lodestone_common"
authors = ["Team Lodestone"]
description = "libLodestone Commons crate"
edition = "2024"
license = "LGPL-2.1"
readme = "/README.md"
repository = "https://github.com/team-lodestone/libLodestone"
homepage = "https://team-lodestone.github.io"

[dependencies]
wasm-bindgen = "0.2.100"
console_error_panic_hook = { version = "0.1.7", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
phf = { version = "0.11.3", features = ["macros"] }
byteorder = "1.5.0"
regex = "1.11.1"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = "s"
