[package]
name = "lodestone_java"
authors = ["Team Lodestone"]
description = "libLodestone Java Edition crate"
edition = "2024"
license = "LGPL-2.1"
readme = "/README.md"
repository = "https://github.com/team-lodestone/libLodestone"
homepage = "https://team-lodestone.github.io"

[dependencies]
lodestone_common = { path = "../common" }
wasm-bindgen = "0.2.100"
console_error_panic_hook = { version = "0.1.7", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
flate2 = "1.1.1"
simdnbt = "0.7.1"
byteorder = "1.5.0"


[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = "s"
